// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configuration changing the default configuration plugins should be able to set own config 1`] = `
{
  "enableDebug": false,
  "injectTailwindConfiguration": [MockFunction],
  "minify": true,
  "stripComments": false,
  "tailwindCssPath": "src/test/configuration/tailwind.css",
}
`;

exports[`configuration changing the default configuration plugins should be able to set own config 2`] = `
{
  "enableDebug": true,
  "injectTailwindConfiguration": [MockFunction],
  "minify": false,
  "stripComments": true,
  "tailwindCssPath": "src/test/configuration/tailwind.css",
}
`;

exports[`configuration changing the default configuration plugins should be able to set own config 3`] = `
{
  "enableDebug": true,
  "injectTailwindConfiguration": [MockFunction],
  "minify": false,
  "stripComments": true,
  "tailwindCssPath": "src/test/configuration/tailwind.css",
}
`;

exports[`configuration changing the default configuration should apply the configuration to all plugins 1`] = `
{
  "enableDebug": true,
  "injectTailwindConfiguration": [MockFunction],
  "minify": false,
  "stripComments": true,
  "tailwindCssPath": "src/test/configuration/tailwind.css",
}
`;

exports[`configuration changing the default configuration should apply the configuration to all plugins 2`] = `
{
  "enableDebug": true,
  "injectTailwindConfiguration": [MockFunction],
  "minify": false,
  "stripComments": true,
  "tailwindCssPath": "src/test/configuration/tailwind.css",
}
`;

exports[`configuration changing the default configuration should apply the configuration to all plugins 3`] = `
{
  "enableDebug": true,
  "injectTailwindConfiguration": [MockFunction],
  "minify": false,
  "stripComments": true,
  "tailwindCssPath": "src/test/configuration/tailwind.css",
}
`;

exports[`configuration given configuration should set options 1`] = `
{
  "enableDebug": true,
  "injectTailwindConfiguration": [Function],
  "minify": false,
  "stripComments": true,
  "tailwindCssPath": "src/test/configuration/tailwind.css",
}
`;

exports[`configuration given configuration should set options 2`] = `
{
  "enableDebug": true,
  "injectTailwindConfiguration": [MockFunction],
  "minify": false,
  "stripComments": true,
  "tailwindCssPath": "src/test/configuration/tailwind.css",
}
`;

exports[`configuration given default configuration should match default options 1`] = `
{
  "enableDebug": false,
  "injectTailwindConfiguration": [Function],
  "minify": true,
  "stripComments": false,
}
`;

exports[`configuration given full postcssrc configuration, should set postcssrc path 1`] = `
{
  "enableDebug": false,
  "injectTailwindConfiguration": [Function],
  "minify": true,
  "postcssPath": "src/test/configuration/postcss.config.js",
  "stripComments": false,
}
`;

exports[`configuration given no configuration should set default options 1`] = `
{
  "enableDebug": false,
  "injectTailwindConfiguration": [Function],
  "minify": true,
  "stripComments": false,
}
`;

exports[`configuration given no configuration should set default options 2`] = `"@import "tailwindcss";"`;
